# dras

./: .dockerignore  .gitignore  .goreleaser.yaml  .releaserc.json  .semrelrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  go.mod  go.sum  main.go  main_test.go
.devcontainer/: devcontainer.json  dockerfile
.github/: renovate.json
.github/lint/: golangci.yaml
.github/workflows/: ci-cd.yml  on-branch-push.yml  on-merge.yml  on-pr.yml  on-release.yml  pr.yml  renovate.yaml
.project/: refactoring-plan.md
chart/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
chart/templates/: NOTES.txt  _app-template-values.tpl  main.yaml
chart/tests/: mode_advanced_test.yaml  mode_standard_test.yaml  validation_test.yaml  values-advanced.yaml  (+2 more)
docs/: README.md  architecture.md  configuration.md  deployment.md  development.md
dras/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  logging.go  logging_test.go  main.go
examples/: kubernetes.yaml
renderer/: .dockerignore  Dockerfile  README.md  pyproject.toml
renderer/scripts/: cartopy_cache.py
renderer/src/dras_renderer/: __init__.py  app.py  basemap.py  cache.py  config.py  decode.py  furniture.py  main.py  metrics.py  render.py  s3.py  service.py  station_views.py  version.py
renderer/tests/: test_app_health.py  test_basemap.py  test_cache.py  test_decode.py  test_furniture.py  test_metrics.py  test_render.py  test_render_route.py  test_s3.py  test_service.py  test_station_views.py
renderer/tests/fixtures/: README.md
scripts/: sync-chart-version.sh  sync-chart-version_test.sh
(+54 files in other folders)
