[project]
name = "dras-renderer"
version = "0.0.0"  # actual version is injected at build time from the git tag
requires-python = ">=3.12,<3.13"
description = "NEXRAD Level II rendering service for dras"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.32,<0.40",
    "boto3>=1.35,<2",
    "botocore>=1.35,<2",
    "arm-pyart>=1.18,<2",
    "adjustText>=1.2,<2",
    "matplotlib>=3.9,<4",
    "cartopy>=0.24,<0.25",
    "numpy>=1.26,<3",
    "prometheus-client>=0.21,<0.30",
    "cachetools>=5.5,<7",
    "pydantic>=2.9,<3",
]

[project.scripts]
dras-renderer = "dras_renderer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dras_renderer"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "moto[s3]>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-cachetools>=5.5",
    "pillow>=11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
